--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/home/kuda/Android/Sdk
-flutter.sdk=/home/kuda/snap/flutter/common/flutter
-flutter.buildMode=release
+sdk.dir=/Users/macbookair/Library/Android/sdk
+flutter.sdk=/Users/macbookair/Developer/flutter
+flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
